k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-pass-system
  labels:
    name: student-pass-system
    app: student-pass-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    app: student-pass-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    app: student-pass-system
